Fix alignment on gallery items lacking alt text
The icons now are in the lower right and they correct for their relative inset values.

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -5938,8 +5938,6 @@ a.status-card.compact:hover {
 
 .media-gallery__item-no-description {
   position: absolute;
-  bottom: 4px;
-  left: 4px;
 }
 
 .media-gallery__item-thumbnail {
